--- a/notebooks/concepts/Specviz from splot concept notebook.ipynb
+++ b/notebooks/concepts/Specviz from splot concept notebook.ipynb
@@ -3286,7 +3286,7 @@
       "    (conceptually)  is  by  integration  of the pixel values between two\n",
       "    marked pixels. This is invoked  with the 'e'  keystroke.   The  user\n",
       "    marks  the  two  edges  of  the line at the continuum.  The measured\n",
-      "    line center, contiuum value, line flux,  and  equivalent  width  are\n",
+      "    line center, continuum value, line flux,  and  equivalent  width  are\n",
       "    given by:\n",
       "    \n",
       "            center = sum (w(i) * (I(i)-C(i))**3/2) / sum ((I(i)-C(i))**3/2)\n",
