--- a/notebooks/concepts/Specviz from splot concept notebook.ipynb
+++ b/notebooks/concepts/Specviz from splot concept notebook.ipynb
@@ -361,7 +361,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Explicily specifying limits\n",
+    "### Explicitly specifying limits\n",
     "\n",
     "There should also be a way to manually set the plot limits:\n",
     "\n",
