--- a/notebooks/concepts/Specviz from splot concept notebook.ipynb
+++ b/notebooks/concepts/Specviz from splot concept notebook.ipynb
@@ -142,7 +142,7 @@
    "source": [
     "specviz.load_data(spec_url)  #<- auto-downloads from the internet\n",
     "\n",
-    "# downalod to a local file and load it by name\n",
+    "# download to a local file and load it by name\n",
     "!wget --content-disposition $spec_url\n",
     "specviz.load_data('spec-1323-52797-0012.fits') "
    ]
