--- a/notebooks/concepts/Specviz from splot concept notebook.ipynb
+++ b/notebooks/concepts/Specviz from splot concept notebook.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "This notebook is organized around broad themes of planned `specviz` features, and how they address specific SPLOT functionality.  All SPLOT functionality is listed here, although at the end several features are listed as \"not to be implemented\".\n",
     "\n",
-    "Also note that most feattures in this notebook are divided into sections: \n",
+    "Also note that most features in this notebook are divided into sections: \n",
     "1. A specification of how this can/should be accomplished \"in the notebook\".  It is important to recognize that \"in the notebook\" assumes there is an active specviz session somewhere in the notebook that is used as the \"hub\" for operations, even when the operations are all Python functions that do not directly require interactivity. \n",
     "2. The desktop interface - this is more focused on \"quick look\" type behavior.\n",
     "3. The MAST interface - this is only highlighted where distinct points need to be made from 1 or 2 (which otherwise overlap a lot)."
