--- a/notebooks/concepts/Specviz from splot concept notebook.ipynb
+++ b/notebooks/concepts/Specviz from splot concept notebook.ipynb
@@ -1127,7 +1127,7 @@
    "source": [
     "2. In the UI, this is potentially much more complicated, as a plugin to support arithmetic would be necessary. Such a plugin is possible, but not necessarily desirable, as part experience suggests the feature requests for this quickly spiral, suggesting simply saying \"use the notebook\" is a better answer.\n",
     "\n",
-    "    Note, though: two piece of arithmetic are critical: a way to subtract a fitted continuum and a way to divide by it.  These could be implemented as part of the *fitting* plugin, however, to avoid having to write a separate arithmetic plugin for this purpose. So the baseline specviz should anclude options for subtracting/dividing by continuum in the fitting UI, and a more general arithmetic plugin (which *must* use the same underlying `specutils` machinery to not confuse users) is an option to consider later."
+    "    Note, though: two piece of arithmetic are critical: a way to subtract a fitted continuum and a way to divide by it.  These could be implemented as part of the *fitting* plugin, however, to avoid having to write a separate arithmetic plugin for this purpose. So the baseline specviz should include options for subtracting/dividing by continuum in the fitting UI, and a more general arithmetic plugin (which *must* use the same underlying `specutils` machinery to not confuse users) is an option to consider later."
    ]
   },
   {
