--- a/notebooks/concepts/Data interactions through CubeViz.ipynb
+++ b/notebooks/concepts/Data interactions through CubeViz.ipynb
@@ -93,7 +93,7 @@
     "\n",
     "Note the `reference` keyword that associated the viewer with a user-readable string name.\n",
     "\n",
-    "Then, we can access the indivial viewer objects through the `get_viewer` method on the `app` instance:"
+    "Then, we can access the individual viewer objects through the `get_viewer` method on the `app` instance:"
    ]
   },
   {
