--- a/notebooks/concepts/Specviz from splot concept notebook.ipynb
+++ b/notebooks/concepts/Specviz from splot concept notebook.ipynb
@@ -3160,7 +3160,7 @@
       "    \n",
       "            wavelength\n",
       "            wavelength peak\n",
-      "            wavelength peak (gaussian|lorenzian|voigt)\n",
+      "            wavelength peak (gaussian|lorentzian|voigt)\n",
       "            wavelength peak gaussian gfwhm\n",
       "            wavelength peak lorentzian lfwhm\n",
       "            wavelength peak voigt gfwhm\n",
