--- a/notebooks/concepts/Data interactions through CubeViz.ipynb
+++ b/notebooks/concepts/Data interactions through CubeViz.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we load an IFU cube data set. **Note** this does not yet auto-populate viewers, still investigtating heuristics on how to associate particular data sets with particular viewers."
+    "Next, we load an IFU cube data set. **Note** this does not yet auto-populate viewers, still investigating heuristics on how to associate particular data sets with particular viewers."
    ]
   },
   {
