--- a/notebooks/concepts/generate_mosviz_photometry.ipynb
+++ b/notebooks/concepts/generate_mosviz_photometry.ipynb
@@ -35,7 +35,7 @@
     "- We use `astropy.io.fits` to read in existing FITS files and write a new one with the synthetic image.\n",
     "- The objects from `astropy.nddata` assist in creating cutouts once we have identified galaxies to take from the field image and also with re-importing our synthetic image.\n",
     "- The `sigma_*` methods from `astropy.stats` work with image data that is clipped to within a certain number of deviations from the mean. `gaussian_fwhm_to_sigma` is a float for converting full width at half maximum values to standard deviations from the image mean.\n",
-    "- The objects from `astropy.table` help with reading an modifiying tabular data.\n",
+    "- The objects from `astropy.table` help with reading an modifying tabular data.\n",
     "- We download a copy of the Artifactory spectra with `astropy.utils.data.download_file`.\n",
     "- `astropy.wcs.WCS` creates a World Coordinate System object that is useful for transforming on-sky data from one patch to another.\n",
     "- `pathlib.Path` allows for the creation of file paths that work across operating systems.\n",
