--- a/notebooks/concepts/Specviz from splot concept notebook.ipynb
+++ b/notebooks/concepts/Specviz from splot concept notebook.ipynb
@@ -3299,7 +3299,7 @@
       "    the  data  value of pixel i, C(i) is the continuum at pixel (i), and\n",
       "    the sum is over the marked range of  pixels.   The  continuum  is  a\n",
       "    linear   function   between  the  two  points  marked.   The  factor \n",
-      "    mulitplying the  continuum  subtracted  pixel  values  in  the  flux\n",
+      "    multiplying the  continuum  subtracted  pixel  values  in  the  flux\n",
       "    calculation  is  the  wavelength interval per pixel so that the flux\n",
       "    integration is done in wavelength units.   (See  the  discussion  at\n",
       "    the end of this section concerning flux units).\n",
