--- a/notebooks/concepts/Minimal Specviz.ipynb
+++ b/notebooks/concepts/Minimal Specviz.ipynb
@@ -106,7 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This erases the unceratinties and masks from the plot."
+    "This erases the uncertainties and masks from the plot."
    ]
   },
   {
