--- a/notebooks/concepts/Specviz from splot concept notebook.ipynb
+++ b/notebooks/concepts/Specviz from splot concept notebook.ipynb
@@ -3236,7 +3236,7 @@
       "            in the file are used.  Missing information is determined\n",
       "            as below.\n",
       "        2.  The line centers are those specified by the user\n",
-      "            either by marking with the cursor, entering the wavelenths,\n",
+      "            either by marking with the cursor, entering the wavelengths,\n",
       "            for read from a file.\n",
       "        3.  The initial widths are obtained by dividing the width of\n",
       "            the marked fitting region by the number of lines and then\n",
