--- a/notebooks/concepts/Specviz from splot concept notebook.ipynb
+++ b/notebooks/concepts/Specviz from splot concept notebook.ipynb
@@ -1419,7 +1419,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While the redshift is useful contextual information, it is most important when used to identify spectral lines.  For this purpose the user needs to be able to input line lists appropriate for their science case. The below describe how to specify such line lists, but regardless the intent is for the user to then see those lines displayed in `specviz`, redshifted to wherver they should be given the value of the `.redshift`/`.radial_velocity` attribute.\n",
+    "While the redshift is useful contextual information, it is most important when used to identify spectral lines.  For this purpose the user needs to be able to input line lists appropriate for their science case. The below describe how to specify such line lists, but regardless the intent is for the user to then see those lines displayed in `specviz`, redshifted to wherever they should be given the value of the `.redshift`/`.radial_velocity` attribute.\n",
     "\n",
     "1. In the notebook line lists should be loadable straightforwardly as astropy tables with spectrally-appropriate units.  The most straightforward option is to consume any table that has 'linename' and 'rest' columns:"
    ]
